# GROUPS

./: CMakeLists.txt  SuperBuild.cmake
GroupsExtension/: CMakeLists.txt
GroupsExtension/Groups/: CMakeLists.txt  Groups.py
Modules/CLI/Groups/: CMakeLists.txt  Groups.cxx  GroupwiseRegistration.cpp  GroupwiseRegistration.h
Modules/Scripted/RigidAlignmentModule/: CMakeLists.txt  RigidAlignmentModule.py
Modules/Scripted/RigidAlignmentModule/Resources/UI/: RigidAlignmentModule.ui
SuperBuild/: External_LAPACK.cmake  External_MeshLib.cmake  External_RigidAlignment.cmake  External_SurfRemesh.cmake
src/: GroupwiseRegistration.cpp~
